fix: visibility byg + styling

--- a/quadrabang2021/style.css
+++ b/quadrabang2021/style.css
@@ -96,10 +96,6 @@ button {
   z-index: 10;
 }
 
-.parallax_group.scroll-enable {
-  overflow-y: visible;
-}
-
 .parallax_layer {
   position: absolute;
   inset: 0;
@@ -179,7 +175,7 @@ nav {
 
 .nav-links {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
   min-width: 500px;
   width: 70%;
@@ -260,10 +256,11 @@ a.nav-link:hover {
     transform: translateX(100%);
     transition: transform 0.4s ease-in;
     margin: 0;
+    justify-content: flex-start;
   }
   .nav-links li {
     opacity: 0;
-    margin-bottom: 4rem;
+    margin-bottom: 5rem;
   }
   .burger {
     display: block;
@@ -271,6 +268,9 @@ a.nav-link:hover {
   .logo_quadra a img {
     height: 4rem;
     width: auto;
+  }
+  a.nav-link{
+    font-size: 3rem;
   }
 }
 
